<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutFragment">


    <ImageView
            android:src="@mipmap/ic_launcher_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:contentDescription="@string/logo"
            android:foregroundGravity="center"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.058"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textAppTitle" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.019"
            android:layout_marginEnd="4dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:gravity="center_horizontal" app:layout_constraintHorizontal_bias="0.5"
            android:includeFontPadding="false"/>
    <TextView
            android:text="@string/application_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textAppInfoTitle" android:layout_marginTop="8dp"
            android:layout_marginBottom="9dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.019"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp" app:layout_constraintTop_toBottomOf="@+id/textAppTitle"
            app:layout_constraintHorizontal_bias="0.5"
            android:gravity="center"/>
    <TableLayout
            android:layout_width="300dp"
            android:stretchColumns="0"
            android:layout_height="wrap_content"
            android:id="@+id/appInfoTable" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textAppInfoTitle" android:layout_marginBottom="3dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.506" app:layout_constraintVertical_bias="0.026">
    </TableLayout>
    <TextView
            android:text="@string/library_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textLibInfoTitle" android:layout_marginTop="8dp"
            android:layout_marginBottom="9dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.111"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.5"
            android:gravity="center" app:layout_constraintTop_toBottomOf="@+id/appInfoTable"/>

    <TableLayout
            android:layout_width="300dp"
            android:stretchColumns="0"
            android:layout_height="wrap_content"
            android:id="@+id/libInfoTable" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textLibInfoTitle" android:layout_marginBottom="3dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.506" app:layout_constraintVertical_bias="0.102">
    </TableLayout>
    <TextView
            android:text="@string/linkSpringcard"
            android:autoLink="phone|web"
            android:layout_width="196dp"
            android:layout_height="26dp"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/libInfoTable" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.223"
            android:textColorLink="@color/colorPrimary" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:gravity="center_horizontal"/>

</android.support.constraint.ConstraintLayout>