<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OptionsFragment">


    <TableLayout
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.497">

        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
                  app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="10dp"
                  android:gravity="center_horizontal">
            <Switch
                    android:text="@string/enable_logs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/switchLog"
                    tools:layout_editor_absoluteY="126dp" tools:layout_editor_absoluteX="134dp"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="10dp"
                  android:gravity="center_horizontal">
            <Switch
                    android:text="@string/stop_on_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/switchStopOnError"
                    tools:layout_editor_absoluteY="126dp" tools:layout_editor_absoluteX="134dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="10dp"
                  android:gravity="center_horizontal">
            <Switch
                    android:text="@string/time_measurement"
                    android:layout_width="308dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/switchEnableTimeMeasurment"
                    tools:layout_editor_absoluteY="126dp" tools:layout_editor_absoluteX="134dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  app:layout_constraintTop_toTopOf="parent"
                  android:gravity="center_horizontal">
            <Switch
                    android:text="Use authentication"
                    android:layout_width="308dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/switchUseAuthentication"
                    tools:layout_editor_absoluteY="126dp" tools:layout_editor_absoluteX="134dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  app:layout_constraintTop_toTopOf="parent"
                  android:gravity="center_horizontal">
                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/keyWrapper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:counterMaxLength="32">
                            <EditText
                                android:layout_width="315dp"
                                android:layout_height="wrap_content"
                                android:digits="0123456789ABCDEF"
                                android:inputType="textCapCharacters"
                                android:ems="10"
                                android:maxLength="32"
                                android:id="@+id/editTextAuthenticationKey" android:textSize="14sp"
                                android:hint="Authentication key"/>
                    </android.support.design.widget.TextInputLayout>
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>